# langchain-demo

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
docs/: session-history-feature.md  transform-implementation.md
server/: .env.example  README.md  dev.sh  pyproject.toml  requirements.txt
server/app/: __init__.py  agent.py  config.py  main.py  models.py  stream_converters.py  test.py  test_chars.py  test_checkpoints.py  test_offset.py  test_tokenize.py  ui_message_stream.py
server/app/agents/: facts_extractor.py
server/app/vercel_ui_message_stream/: converter.py  model_converter.py  schema.py  tool_converter.py
server/app/vercel_ui_message_transform/: README.md  __init__.py  transform.py
server/docs/: facts-extractor.md  source-position.md  state-snapshot-support.md  stream-converter.md
server/examples/: transform_example.py
server/tests/: integration_test_facts_extractor.py  test_agent_tools.py  test_facts_extractor.py  test_history.py  test_stream_converters.py  test_vercel_ui_message_schema.py
server/tests/vercel_ui_message_stream/: test_converter.py  test_model_converter.py  test_schema.py  test_state_snapshot.py  test_step_lifecycle.py  test_tool_converter.py  utils.py
server/tests/vercel_ui_message_stream/snapshots/: full-converted.json  full.json  model-converted.json  model.json  multiple-tools-converted.json  multiple-tools.json  text-only-converted.json  text-only.json  tools-converted.json  tools-empty-converted.json  tools-empty.json  tools-list-content-converted.json  tools-list-content.json  tools-multiple-converted.json  tools-multiple.json  tools.json
server/tests/vercel_ui_message_transform/: __init__.py  test_step_lifecycle.py  test_transform.py
specs/001-monorepo-llm-agent/: data-model.md  plan.md  (+4 more)
ui/: .env.example  README.md  drizzle.config.ts  index.html  package.json
(+12 files in other folders)
