[project]
name = "langchain-demo-server"
version = "0.1.0"
description = "FastAPI LLM Agent Server with LangChain/LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.2",
    "uvicorn[standard]>=0.38.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "dashscope>=1.25.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "anyio>=4.12.0",
    "pytest-asyncio>=1.3.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=25.5.0",
    "ruff>=0.14.9",
]

[tool.mypy]
disallow_any_expr = true
warn_return_any = true
no_implicit_optional = true

[tool.ruff]
select = [
    "E", "W", "F",  # 基础错误/警告/格式化
    "ANN",          # 类型注解
]
ignore = ["ANN101"]  # 允许省略 self/cls 类型